# ai-asst-mgr

./: .bandit  .gitignore  .pre-commit-config.yaml  AUTOMATION_COMPLETE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GITHUB_ISSUES.md  MAINTAINER_CONTROL_COMPLETE.md  PROJECT_SETUP.md  PROJECT_STATUS.md  QUICK_START_MAINTAINER.md  README.md  REPOSITORY_SETTINGS.md  SETUP_COMPLETE.md  pyproject.toml
.claude/: DEVELOPMENT_STANDARDS.md  PARALLEL_DEVELOPMENT_PLAYBOOK.md
.claude/analysis/: infrastructure-improvements-report.md  phase3-completion-report.md  phase3-retrospective.md
.claude/skills/: parallel-merge-coordinator.md  parallel-task-decomposer.md  test-coverage-enforcer.md
.github/: BACKLOG_REVIEW.md  CODEOWNERS  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-label.yml  ci.yml  claude-assistant.yml  release.yml  stale.yml
docs/: GITHUB_CONTEXTS.md  GITHUB_INTEGRATION.md  architecture.md  commands.md  installation.md
scripts/: README.md  backup-configs.sh  bootstrap_repository.py  bump_version.sh  configure_repository.py  create_issues.py  create_labels.py  create_milestones.py  seed_data.py  setup_github.py
scripts/parallel-dev/: README.md  agent_tracker.json  orchestrator.py  setup_worktrees.sh
src/ai_asst_mgr/: __init__.py  cli.py
src/ai_asst_mgr/adapters/: __init__.py  base.py  claude.py  gemini.py  openai.py
src/ai_asst_mgr/audit/: __init__.py  base.py  claude.py  gemini.py  openai.py
src/ai_asst_mgr/capabilities/: __init__.py  manager.py
src/ai_asst_mgr/coaches/: __init__.py  base.py  claude.py  gemini.py  openai.py
src/ai_asst_mgr/database/: __init__.py  manager.py  migrate.py  migrations.py  schema.py  sync.py  sync_gemini.py
src/ai_asst_mgr/database/migrations/: 001_vendor_agnostic.sql
src/ai_asst_mgr/github/: __init__.py  activity_logger.py
src/ai_asst_mgr/models/: __init__.py
src/ai_asst_mgr/operations/: __init__.py  backup.py  github_parser.py  restore.py  sync.py
src/ai_asst_mgr/platform/: __init__.py  base.py  linux.py  macos.py
src/ai_asst_mgr/tracking/: __init__.py  session_tracker.py
src/ai_asst_mgr/utils/: __init__.py  git.py  tarfile_safe.py
src/ai_asst_mgr/vendors/: __init__.py
src/ai_asst_mgr/web/: __init__.py  app.py  services.py
src/ai_asst_mgr/web/routes/: __init__.py  api.py  pages.py
src/ai_asst_mgr/web/static/css/: style.css
src/ai_asst_mgr/web/templates/: agents.html  base.html  dashboard.html  error.html  github.html  review.html  sessions.html
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_audit.py  test_backup.py  test_capabilities.py  test_claude_adapter.py  test_claude_coach.py  test_cli.py  test_cli_coach.py  test_cli_github_additional.py  test_coach_base.py  test_codex_coach.py  test_database.py  test_database_sync.py  test_database_sync_gemini.py  test_gemini_adapter.py  test_gemini_coach.py  test_github_activity.py  test_github_parser.py  test_imports.py  test_migrate.py  test_openai_adapter.py  test_platform.py  test_restore.py  test_sync.py  test_tracking.py  test_utils_git.py  test_utils_tarfile.py  test_vendor_adapter_base.py  test_vendor_registry.py  test_version.py  test_web.py
wiki/: Development-Setup.md  Development-Workflow.md  GitHub-Setup-Scripts.md  Home.md  README.md
