[project]
name = "ai-asst-mgr"
version = "0.1.0"
description = "Universal AI assistant configuration manager for Claude Code, Gemini CLI, OpenAI Codex, and more"
authors = [
    {name = "Ryan Hammang", email = "ryan@techr10n.com"}
]
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
keywords = ["ai", "assistant", "claude", "gemini", "openai", "cli", "manager"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "toml>=0.10.2",
    "click>=8.1.7",
    "gitpython>=3.1.45",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
    "types-toml>=0.10.8",
]

[project.scripts]
ai-asst-mgr = "ai_asst_mgr.cli:app"

[project.urls]
Homepage = "https://github.com/TechR10n/ai-asst-mgr"
Documentation = "https://github.com/TechR10n/ai-asst-mgr/wiki"
Repository = "https://github.com/TechR10n/ai-asst-mgr"
Issues = "https://github.com/TechR10n/ai-asst-mgr/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_asst_mgr"]

# Ruff configuration for PEP-8 compliance and docstring checking
[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle (PEP-257)
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "TRY",    # tryceratops
    "RUF",    # ruff-specific rules
]
ignore = [
    "D203",    # 1 blank line required before class docstring (conflicts with D211)
    "D213",    # Multi-line docstring summary should start at the second line (conflicts with D212)
]

[tool.ruff.lint.pylint]
max-args = 6  # Orchestration functions and CLI commands need 6 params

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D100",    # Missing docstring in public module
    "D103",    # Missing docstring in public function
    "ANN201",  # Missing return type annotation for public function
    "PLR2004", # Magic value used in comparison
    "TC003",   # Move standard library import into type-checking block (Path used at runtime in fixtures)
    "ARG002",  # Unused method argument (fixtures often need parameters for dependency chain)
    "PLC0415", # Local imports for test isolation and lazy loading of test helpers
    "PT017",   # Assertion on exception in except - valid for testing exit codes
    "RUF059",  # Unpacked variable unused - tests verify specific return values
]
"src/ai_asst_mgr/operations/sync.py" = [
    "TC003",   # Path used at runtime in dataclass fields and function bodies
]
"src/ai_asst_mgr/utils/tarfile_safe.py" = [
    "TC003",   # tarfile and Path used at runtime in extraction operations
]
"**/__init__.py" = [
    "PLC0415", # Lazy imports in __init__.py for circular import avoidance and platform-specific loading
]
"scripts/**/*.py" = [
    "D",       # Docstring requirements relaxed for utility scripts
    "ANN",     # Type annotations relaxed for utility scripts
    "PLC0415", # Lazy imports acceptable in scripts
    "PLR2004", # Magic values acceptable in scripts
]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Use Google-style docstrings

[tool.ruff.lint.isort]
known-first-party = ["ai_asst_mgr"]

# Mypy configuration for strict type checking
[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "ai_asst_mgr.cli"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "scripts.*"
ignore_errors = true  # Utility scripts don't require strict typing

# Bandit security linter configuration
[tool.bandit]
exclude_dirs = ["tests", "build", "dist", ".venv"]
skips = [
    "B101",  # assert_used - asserts are valid for development/debug
    "B404",  # subprocess import - required for platform scheduling (launchctl, crontab)
    "B603",  # subprocess without shell=True - shell=False IS the secure pattern
    "B607",  # partial executable path - platform module uses shutil.which(), scripts use gh CLI
]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=ai_asst_mgr",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 93.0  # Temporarily lowered for Phase 8; restore to 95.0 after adding filesystem tests
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]
